# Nexus

./: .env  .env.template  Building an Autonomous Agent_ A Technical Guide Inspired by Manus.md  CHANGES.md  CLAUDE.md  CRITICAL_INFO.md  DOCUMENTATION_OVERVIEW.md  Dockerfile  HOW_TO_CLI.md  HOW_TO_DEPLOY.md  HOW_TO_TEST.md  QUICK_START.md  README.md  README_FREE.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  hello_world.py  install-nexus.sh  install.sh  nexus  note.txt  note.txt.backup  package-lock.json  project_overview.md  pyproject.toml  quick-test.sh  requirements.md  requirements.txt  run-nexus.py  run-test.sh  script.py  security.md  setup-test.sh  tech_stack.md  test-interactive.py  test-local.sh  (+4 more)
.github/: README.md
docs/: activity.md
manus/: __init__.py  cli.py
manus/api/: __init__.py  server.py
manus/core/: __init__.py  agent.py  config.py  exceptions.py  llm_providers.py  loop.py  state.py
manus/knowledge/: base.py
manus/security/: __init__.py  validator.py
manus/tools/: __init__.py  file_tools.py  registry.py  shell_tools.py
manus/utils/: __init__.py  logger.py  metrics.py
tests/: __init__.py
