[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "manus-remake"
version = "0.1.0"
description = "Autonomous AI Agent inspired by ManusAI with Claude integration"
authors = ["Sam Oakes <samoakes@example.com>"]
readme = "README.md"
packages = [{include = "manus"}]

[tool.poetry.dependencies]
python = "^3.11"
# Local LLM dependencies
torch = "^2.1.0"
transformers = "^4.36.0"
tokenizers = "^0.15.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3"
# Web and API
selenium = "^4.15.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
# Core utilities
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
psutil = "^5.9.6"
pillow = "^10.1.0"
cryptography = "^41.0.7"
rich = "^13.7.0"
# Optional: Anthropic API (if user wants to use it)
anthropic = {version = "^0.34.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[tool.poetry.group.security.dependencies]
bandit = "^1.7.5"
safety = "^2.3.4"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["manus"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # bandit
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # use of assert
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --disable-warnings"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "slow: Slow running tests",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.poetry.scripts]
manus = "manus.cli:main"